src/css/lisskins_styles.css
html {
	color-scheme: dark;
}

.betterfloat-buff-a {
	display: inline-flex !important;
	align-items: center;
	flex-direction: row;
	text-decoration: none;
	left: 8px;
	margin-top: 2px;
	position: absolute;
	z-index: 30;
}

.betterfloat-big-a {
	position: static;
}

.betterfloat-buffprice {
	margin-left: 2px;
	font-size: 13px;
	font-style: normal;
	font-weight: 500;
	line-height: 20px;
	letter-spacing: 0.02em;
}

.betterfloat-sale-tag {
	display: inline-flex;
	flex-direction: column;
	position: absolute;
	right: 5px;
	z-index: 20;
	translate: 0 15px;
	font-size: 11px;
	font-style: normal;
	font-weight: 525;
	line-height: 17px;
	letter-spacing: -0.005em;
	text-wrap: nowrap;
	padding: 1px 3px;
	border-radius: 4px;
}

.betterfloat-buff-tooltip {
	/* Positioning the tooltip text */
	position: absolute;
	z-index: 9999;
	transform: translate(-13%, 25px);

	visibility: hidden;
	color: #fff;
	text-align: center;
	-webkit-backdrop-filter: blur(10px);
	backdrop-filter: blur(10px);
	background-color: #171920c4;
	padding: 10px 5px;
	border-radius: 4px;
	border: 1px solid #3f3f3f;
	font-size: 13px;
	width: 180px;

	/* Fade in tooltip */
	opacity: 0;
	transition: opacity 0.1s;
}

.betterfloat-buffprice:hover .betterfloat-buff-tooltip {
	visibility: visible;
	opacity: 1;
	transition:
		visibility 0s,
		opacity 0.2s linear;
}

.betterfloat-sticker-percentage {
	border-radius: 5px;
	white-space: nowrap;
	font-size: 12px;
	font-weight: 400;

	&.page {
		padding: 8px 5px;
	}

	&.market {
		position: absolute;
		bottom: 80px;
		right: 30px;
		padding: 3px 5px;
	}
}

.betterfloat-item-page-link {
	align-self: normal;
	background-position: 50%;
	background-repeat: no-repeat;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3C!-- --%3E%3Cpath fill='%23999CA4' d='M5 21q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3h6q.425 0 .713.288T12 4t-.288.713T11 5H5v14h14v-6q0-.425.288-.712T20 12t.713.288T21 13v6q0 .825-.587 1.413T19 21zM19 6.4L10.4 15q-.275.275-.7.275T9 15t-.275-.7t.275-.7L17.6 5H15q-.425 0-.712-.288T14 4t.288-.712T15 3h5q.425 0 .713.288T21 4v5q0 .425-.288.713T20 10t-.712-.288T19 9z'/%3E%3C/svg%3E");
	background-size: 18px;
	text-align: center;
	transition: all 0.3s;
	width: 35px;
}

